some flicker fixes

--- a/web-app/client/assets/css/main.css
+++ b/web-app/client/assets/css/main.css
@@ -280,6 +280,23 @@ a, a:visited {
 	height: 36px;
 	background-color: #8c9495;
 }
+
+#second-level-warning {
+  background-color: #5590F0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: 0px auto;
+  width: 100%;
+  text-align: center;
+  z-index: 101;
+}
+
+#second-level-warning div {
+  padding: 10px;
+  color: white;
+}
+
 #global {
 	float: right;
 	padding: 3px;
